--- a/sass/section/_slideshow.scss
+++ b/sass/section/_slideshow.scss
@@ -9,7 +9,7 @@ img{
     object-fit: cover;
 }
 .slides{
-    width: 80rem;
+    width:100%;
     margin: auto;
     height: 70vh;
     position: relative;
